<resources>
    <string name="app_name">Rcode</string>

    <string name="profile_updated_text">Your profile has been updated</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_active_users">Active Users</string>
    <string name="title_activity_online">Online</string>

    <!-- Strings related to user profile -->
    <string name="prompt_username">User name</string>
    <string name="prompt_bio">Bio (optional)</string>
    <string name="action_update">Update profile</string>
    <string name="error_invalid_username">This user name is too long</string>
    <string name="error_invalid_bio">This bio is too long</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_different_passwords">The passwords don\'t match</string>
    <string name="error_invalid_email">This email is not valid</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>


    <string name="error_field_required">This field is required</string>

    <!-- Strings related to user login and registration -->
    <string name="prompt_login_username">User name</string>
    <string name="prompt_login_pass">Password</string>
    <string name="prompt_login_pass_bis">Repeat password</string>
    <string name="prompt_login_email">Email</string>

    <string name="action_login">Login</string>
    <string name="action_new_account">New account</string>

    <string name="action_register">Register</string>
    <string name="action_existing_account">Existing account</string>

    <!-- Strings related to permissions -->
    <string name="profile_image_permission">This permission is needed in order to select a profile image</string>
    <string name="gps_permission">This permission is needed in order to use the map</string>
    <string name="typeMessage">Send text</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_login">Login</string>
    <string name="tab_register">Register</string>
    <string name="tab_map">Map</string>
    <string name="tab_conversations">Chat</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps">Map</string>

    <string name="app_nameG">RCode</string>
    <string name="app_nameL">RCode</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main_rcode">MainRcodeActivity</string>
    <string name="rcoder">RCoder</string>


</resources>
